[package]
authors = ["Casey Primozic <me@ameo.link>"]
name = "ants"
version = "0.1.0"

[dependencies]
itertools = "0.7.6"
lazy_static = "1.0.0"
rand = "*"

[dependencies.ketos]
path = "../ketos"

[dependencies.minutiae]
path = "../minutiae"

[dependencies.pcg]
git = "https://github.com/ameobea/pcg.git"

[dependencies.uuid]
features = ["v4"]
version = "0.5.1"

[features]
default = ["wasm"]
wasm = []
