[package]
authors = ["Casey Primozic <me@ameo.link>"]
description = "A web-based frontend for Minutiae providing three different rendering options"
name = "minutiae-client"
version = "0.1.0"

[dependencies]
serde = "^1.0.27"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.minutiae]
features = ["client"]
path = "../minutiae"

[dependencies.uuid]
features = ["v4"]
version = "0.6.0"

[features]
default = ["thin"]
fat = []
hybrid = []
thin = []
