[package]
authors = ["Casey Primozic <me@ameo.link>"]
name = "colony"
version = "0.1.0"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
lazy_static = "1.0.0"
noise = "0.5.1"
serde = "1.0.27"
serde_derive = "1.0.27"
uuid = "0.6.0"

[dependencies.minutiae]
features = ["serde_support", "client"]
path = "../minutiae"
version = "0.10.0"

[lib]
