[package]
authors = ["Casey Primozic <me@ameo.link>"]
name = "dust"
version = "0.1.0"

[dependencies]
num = "0.1.40"
palette = "0.2"
rand = "*"

[dependencies.libcomposition]
path = "../../noise-asmjs/libcomposition"

[dependencies.minutiae]
path = "../minutiae"

[dependencies.noise]
git = "https://github.com/Ameobea/noise-rs.git"

[dependencies.pcg]
git = "https://github.com/codahale/pcg.git"

[dependencies.uuid]
features = ["v4"]
version = "0.5.0"
