[package]
name = "minutiae-fish"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]

[dependencies]
minutiae = { version = "0.4.0", features = ["server"] }
# minutiae = { path = "../minutiae", features = ["server"] }
clippy = { git = "https://github.com/Manishearth/rust-clippy", optional = true}

pcg = { git = "https://github.com/ameobea/pcg.git" }
rand = "0.3"
serde = "1.*.*"
serde_derive = "1.*.*"
uuid = { version = "0.5.0", features = ["v4"] }
ws = "0.7.1"

[profile.release]
debug = true
lto = true

[features]
# default = ["clippy"]
