[package]
name = "minutiae-libremote"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]

[dependencies]
bincode = "0.8.0"
flate2 = { version = "0.2.19", features = ["zlib"], default-features = false }
serde = "1.*.*"
serde_derive = "1.*.*"
uuid = { version = "0.5.0", features = ["v4", "serde"] }
clippy = {version = "*", optional = true}
