[package]
authors = ["Casey Primozic <me@ameo.link>"]
description = "Cellular Automata-esque simulation engine involving a 2D universe populated by cells and entities"
homepage = "https://github.com/Ameobea/minutiae"
keywords = ["simulation", "automata", "engine", "entity"]
license = "MIT"
name = "minutiae"
repository = "https://github.com/Ameobea/minutiae"
version = "0.9.0"

[dependencies]
gif = "0.9.2"
num_cpus = "1.8.0"

[dependencies.bincode]
optional = true
version = "1.0.0"

[dependencies.flate2]
default-features = false
features = ["zlib"]
optional = true
version = "1.0.1"

[dependencies.serde]
optional = true
version = "^1.0.27"

[dependencies.serde_derive]
optional = true
version = "^1.0.27"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.6.0"

[dependencies.ws]
optional = true
version = "0.7.3"

[features]
client = ["serde_support", "bincode", "flate2"]
serde_support = ["serde", "serde_derive"]
server = ["ws", "serde_support", "bincode", "flate2"]

[profile]

[profile.release]
debug = true
lto = true
