[package]
authors = ["Casey Primozic <me@ameo.link>"]
description = "Cellular Automata-esque simulation engine involving a 2D universe populated by cells and entities"
homepage = "https://github.com/Ameobea/minutiae"
keywords = [
    "simulation",
    "automata",
    "engine",
    "entity",
]
license = "MIT"
name = "minutiae"
repository = "https://github.com/Ameobea/minutiae"
version = "0.12.2"

[dependencies]
futures = "0.1.19"
futures-cpupool = {version="0.1.8", optional=true}
gif = "0.9.2"
num_cpus = "1.8.0"
tokio-core = {version="0.1.16",optional=true}
rand_pcg = "0.1.1"
rand = "0.5.5"
slab = "0.4.1"

[dependencies.bincode]
optional = true
version = "1.0.0"

[dependencies.flate2]
optional = true
version = "1.0.1"

[dependencies.serde]
optional = true
version = "^1.0.27"

[dependencies.serde_derive]
optional = true
version = "^1.0.27"

[dependencies.uuid]
features = [
    "v4",
    "serde",
]
version = "0.7.1"

[dependencies.wasm-bindgen]
optional = true
version = "=0.2.47"

[dependencies.websocket]
optional = true
version = "0.26.5"

[features]
client = [
    "serde_support",
    "bincode",
    "flate2",
]
serde_support = [
    "serde",
    "serde_derive",
]
server = [
    "tokio-core",
    "websocket",
    "serde_support",
    "bincode",
    "flate2",
    "futures-cpupool"
]
emscripten = [
    "wasm-bindgen"
]

[profile.release]
debug = true
lto = true
